--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -16,12 +16,18 @@
         android:padding="@dimen/dimen_5dp"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <TextView
             android:id="@+id/img_logo_back"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/dimen_15sp"
+            android:textColor="@color/white"
+            android:paddingLeft="@dimen/dimen_10dp"
+            android:paddingTop="@dimen/dimen_10dp"
+            android:paddingBottom="@dimen/dimen_5dp"
             android:layout_marginLeft="@dimen/dimen_5dp"
-            android:src="@drawable/ic_home_black_24dp"/>
+            android:text="Technician"
+            />
 
         <Button
             android:id="@+id/btclick"
